apps/06-media-apps/05-deluge/service.yml
apiVersion: v1
kind: Service
metadata:
  name: deluge-web
  namespace: media
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: deluge-vpn
    app.kubernetes.io/name: deluge-vpn
    app.kubernetes.io/part-of: deluge-vpn
spec:
  selector:
    app.kubernetes.io/component: deluge-vpn
    app.kubernetes.io/instance: deluge-vpn
    app.kubernetes.io/name: deluge-vpn
    app.kubernetes.io/part-of: deluge-vpn
  ports:
    - name: deluge-web
      protocol: TCP
      port: 8112
      targetPort: deluge-web
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: deluge-rpc
  namespace: media
  labels:
    app.kubernetes.io/component: rpc
    app.kubernetes.io/instance: deluge-vpn
    app.kubernetes.io/name: deluge-vpn
    app.kubernetes.io/part-of: deluge-vpn
spec:
  selector:
    app.kubernetes.io/component: deluge-vpn
    app.kubernetes.io/instance: deluge-vpn
    app.kubernetes.io/name: deluge-vpn
    app.kubernetes.io/part-of: deluge-vpn
  ports:
    - name: deluge-rpc
      protocol: TCP
      port: 58846
      targetPort: deluge-rpc
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: deluge-exporter
  namespace: media
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/instance: deluge-vpn
    app.kubernetes.io/name: deluge-vpn
    app.kubernetes.io/part-of: deluge-vpn
spec:
  selector:
    app.kubernetes.io/component: deluge-vpn
    app.kubernetes.io/instance: deluge-vpn
    app.kubernetes.io/name: deluge-vpn
    app.kubernetes.io/part-of: deluge-vpn
  ports:
    - name: deluge-exporter
      port: 8011
      targetPort: deluge-exporter
  type: ClusterIP
